# Block-Data-Fetcher

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
.sqlx/: query-1cb1ce470d8b229ce1869f91cecba1f51698e95c6995a64521b3e5cc8344c26f.json  query-96b02e55fd3022d711a1e014a5b35011fd701c11d8a96c2a1809c3da6a7b5588.json  query-d395fc171e02023b865c66fa4a2518f7110f8e3de1e0a11db756bdbc4ffe576d.json  query-f798a6f1ab5c493fd85747bbbf1a4b0d8aa5e96825a72ffa45b3efb904232000.json
migrations/: 20251023000001_create_blocks.sql  20251023000002_create_transactions.sql  20251023000003_create_instructions.sql  20251023000004_create_accounts.sql  20251023000005_create_program_registry.sql  20251023000006_add_kamino_drift.sql  20251023000007_increase_transaction_label_length.sql
src/: cli.rs  main.rs  models.rs  pipeline.rs
src/db/: mod.rs
src/etl/: extract.rs  load.rs  mod.rs  transform.rs
src/etl/parsers/: mod.rs  system.rs  token.rs
src/rpc/: mod.rs
