# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
authors = ["0xfave"]
description = "Solana Block Data Fetcher - ETL pipeline for Solana transaction data"
edition = "2021"
homepage = "https://github.com/0xfave/Block-Data-Fetcher"
license = "MIT"
name = "block-data-fetcher"
version = "0.1.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana SDK and Client
solana-client = "3.0"
solana-sdk = "3.0"
solana-transaction-status = "3.0"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP Client for custom RPC calls
reqwest = { version = "0.12", features = ["json"] }

# Database (PostgreSQL)
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "json",
] }

# Date and Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment Variables
dotenv = "0.15"

# CLI
clap = { version = "4.5", features = ["derive"] }
